Project

General

Profile

Actions

Bug #48632

closed

S3 error: 404 (NoSuchBucket) due to distribute cache is not being invoked

Added by Or Friedmann over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Reproducer:

aws s3 cp s3://hello/hosts abc --endpoint-url http://<rgw1>
aws s3 mb s3://hello --endpoint-url http://<rgw2>
aws s3 cp s3://hello/hosts abc --endpoint-url http://<rgw2>
aws s3 cp s3://hello/hosts abc --endpoint-url http://<rgw1> (bucket does not exists although it is)


Related issues 3 (0 open3 closed)

Has duplicate rgw - Bug #47859: octopus: rgw: 404 swift response code due to cache hit (negative entry) Duplicate

Actions
Copied to rgw - Backport #48743: octopus: S3 error: 404 (NoSuchBucket) due to distribute cache is not being invokedResolvedNathan CutlerActions
Copied to rgw - Backport #48744: nautilus: S3 error: 404 (NoSuchBucket) due to distribute cache is not being invokedResolvedNathan CutlerActions
Actions #1

Updated by Or Friedmann over 3 years ago

  • Backport changed from octopus to nautilus octopus
Actions #2

Updated by Or Friedmann over 3 years ago

  • Pull request ID set to 38616
Actions #3

Updated by Or Friedmann over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48743: octopus: S3 error: 404 (NoSuchBucket) due to distribute cache is not being invoked added
Actions #5

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48744: nautilus: S3 error: 404 (NoSuchBucket) due to distribute cache is not being invoked added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions #7

Updated by Casey Bodley over 2 years ago

  • Has duplicate Bug #47859: octopus: rgw: 404 swift response code due to cache hit (negative entry) added
Actions

Also available in: Atom PDF